# zephyr

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
contrib/rlwrap/: monerocommands_bitmonerod.txt
docs/: CONTRIBUTING.md
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp
src/checkpoints/: checkpoints.cpp
src/crypto/: crypto.cpp  hash-ops.h  rx-slow-hash.c
src/cryptonote_basic/: CMakeLists.txt  account.cpp  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  difficulty.cpp  difficulty.h  miner.cpp  verification_context.h
src/cryptonote_core/: CMakeLists.txt  blockchain.cpp  blockchain.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  tx_pool.cpp  tx_pool.h  tx_sanity_check.cpp  tx_sanity_check.h  tx_verification_utils.cpp  tx_verification_utils.h
src/cryptonote_protocol/: cryptonote_protocol_handler.inl  enums.h
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  executor.cpp  main.cpp  rpc_command_executor.cpp  rpc_command_executor.h
src/daemonizer/: windows_daemonizer.inl
src/debug_utilities/: CMakeLists.txt  cn_deserialize.cpp  dns_checks.cpp
src/device/: device_ledger.cpp
src/device_trezor/: device_trezor.cpp
src/gen_multisig/: gen_multisig.cpp
src/gen_ssl_cert/: CMakeLists.txt  gen_ssl_cert.cpp
src/hardforks/: hardforks.cpp
src/oracle/: CMakeLists.txt  asset_types.h  oracle_structs.h  pricing_record.cpp  pricing_record.h
translations/: monero_de.ts  monero_el.ts  monero_es.ts  monero_fr.ts  monero_hi.ts  monero_is.ts  monero_it.ts  monero_ja.ts  monero_nb_NO.ts  monero_ne.ts  monero_nl.ts  monero_pl.ts  monero_prt.ts  monero_pt-br.ts  monero_sk.ts  monero_sv.ts  monero_tr.ts  monero_uk.ts  monero_zu.ts
(+107 files in other folders)
